Ros2_workspace/log/build_2022-05-12_13-18-37/got_coffe/stderr.log
  File "/home/xilinx/wrkspace/install/got_coffe/lib/python3.8/site-packages/got_coffe/nn_pub.py", line 4
    from DPU-PYNQ.pynq_dpu import DpuOverlay
            ^
SyntaxError: invalid syntax

